# kudoz

./: Cargo.toml  README.md  superkudo.example.with_payload.yaml  superkudo.example.yaml  superkudos.kudoz.desh.es.yaml
fixtures/: deployment.example.yaml
kudoz-controller/: Cargo.toml  build.rs
kudoz-controller/src/: main.rs  utils.rs
kudoz-crd/: Cargo.toml
kudoz-crd/src/: lib.rs
