[package]
name = "kudoz-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kudoz-crd = { path = "../kudoz-crd" }
backoff = "0.4.0"
futures = "0.3.28"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_24", "schemars"] } # Kube-rs depends on k8s-openapi
kube = { version = "0.80", default-features = true, features = ["derive", "runtime"] } # Library for talking to Kubernetes API
schemars = "0.8"
serde = "1"
serde_json = "1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }

[build-dependencies]
kudoz-crd = { path = "../kudoz-crd" }
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_24", "schemars"] } # Kube-rs depends on k8s-openapi
kube = { version = "0.80", features = ["derive"] } # Library for talking to Kubernetes API
serde = "1"
serde_yaml = "0.8"
